# squonk2-deck

./: .gitignore  .pre-commit-config.yaml  .pylintrc  DEVELOPER-README.md  LICENSE  README.md  README.rst  build-requirements.txt  environments  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yaml  publish.yaml
src/squeck/: access_token.py  common.py  squeck.py
src/squeck/widgets/: env.py
