[build-system]
requires = ["setuptools >= 82"]
build-backend = "setuptools.build_meta"

[project]
name = "im-squeck"
version = "0.0.0"
description = "The IM Squonk2 Deck (squeck)"
readme = "README.rst"
keywords = ["configuration"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Installation/Setup",
  "Operating System :: POSIX :: Linux",
]
authors = [
  {name = "Alan Christie", email = "achristie@informaticsmatters.com"},
]
maintainers = [
  {name = "Alan Christie", email = "achristie@informaticsmatters.com"},
]
requires-python = ">=3.10"
dependencies = [
  "im-squonk2-client>=2.2.1,<3.0.0",
  "pyyaml>=6.0.0,<7",
  "textual>=8.0.0,<9",
]

[project.scripts]
squeck = "squeck.squeck:main"

[project.urls]
Repository = "https://github.com/InformaticsMatters/squonk2-deck.git"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyroma>=5.0.1",
]
